JBOT-31 implement input validation using yup schemas
