# src/server/utils.ts
@@ -19,14 +19,24 @@ export function generateAccessToken(user: IUser, secret: string) {
 export function authenticateToken(req, res, next) {
   const token = getJWT(req)
   if (token == null) return res.sendStatus(401)
-
-  jwt.verify(token, process.env.TOKEN_SECRET as string, (err: any, user: any) => {
+  jwt.verify(token, process.env.TOKEN_SECRET as string, (req: express.Request, err: any, user: any) => {
     if (err) return res.sendStatus(403)
-
+    //@ts-ignore
     req.user = user
 
     next()
   })
+}
+
+export function verifyNoToken(req, res, next) {
+  
+  const token = getJWT(req)
+  if(token) {
+    res.statusCode = 400
+    return res.send("")
+  } else {
+    next()
+  }
 }
 
 export function setupJwtAuth() {
@@ -38,7 +48,8 @@ export function setupJwtAuth() {
     },
     aud: "http://localhost"
   }
-  const verify = (jtwPayload, done: (err, user, info) => void) => {
+  const verify = (jwtPayload, done: (err, user, info) => void) => {
+    console.log("this is my jwtpayload", jwtPayload)
     done(null, {test: "test"}, {} )
   }
 
@@ -50,7 +61,7 @@ export function setupPKAuth(app: express.Application) {
   const localStrategy = new LocalStrategy(
     async function(username, challenge, done) {
       const userService: IUser = app.get("userService")
-      const challengeResp = await userService.verifyChallenge(username, challenge)
+      const challengeResp = await userService.login(username, challenge)
       if(challengeResp.IsError) {
         return done(challengeResp.Message, null)
       }
